--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <!-- UNICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <title>Kartik Portfolio</title>
+
+    
+    <title>Kartik Malviya</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
